fix gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,7 +345,7 @@ a.link-brand svg{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    gap: 3.2rem;
+    gap: 4rem;
 }
 .about-avatar{
     flex: 2;
@@ -365,7 +365,7 @@ a.link-brand svg{
         margin: 3.2rem auto;
     }
     .about-content{
-        width: 100%;
+        gap: 3.2rem;
     }
 }
 @media (max-width: 767px){
